# foundry-agent-demo

./: .env.example  .gitignore  README.md  STREAMING_IMPLEMENTATION.md  pyproject.toml
.devcontainer/: devcontainer.json
src/hr_agent/: cli.py  config.py  cosmos_thread_store.py  session_store.py  telemetry.py  thread_store.py  webapp.py
src/hr_agent/agents/: hr_agent.py
src/hr_agent/search/: retriever.py
src/hr_agent/web/: chat.html
