[project]
name = "hr-agent-poc"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "semantic-kernel==1.39.0",
  "azure-identity",
  "azure-search-documents",
  "azure-monitor-opentelemetry",
  "azure-cosmos",
  "python-dotenv",
  "fastapi (>=0.125.0,<0.126.0)",
  "uvicorn (>=0.38.0,<0.39.0)",
  "azure-ai-agents (>=1.1.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
